# extend_msgs

./: .gitignore  CMakeLists.txt  DISTRIBUTING.md  package.xml
action/: CollectData.action
msg/: ArmControl.msg  ArmResponse.msg  BioIKTarget.msg  ConnectionManager.msg  ControlDebug.msg  CortexConfiguration.msg  ExtendControl.msg  ExtendResponse.msg  FileUploadStatus.msg  GripperControl.msg  GripperJointInfo.msg  GripperResponse.msg  GripperSensorInfo.msg  JointCommand.msg  JointInfo.msg  LinkDetails.msg  MobileBaseCommand.msg  MobileBaseResponse.msg  SensorInfo.msg  TargetLinkInfo.msg
scripts/: package.sh
srv/: ControlManager.srv  CortexConfigurationInfo.srv  DeleteFile.srv  GetListOfFiles.srv  LoadAllFilesInFolder.srv  LoadFile.srv  SafetyParameter.srv  SaveFile.srv
