<?xml version="1.0"?>
<package>

  <name>extend_msgs</name>
  <version>5.3.0</version>

  <description>ROS messages for ARM control and response</description>

  <maintainer email="nitish.sharma@extendrobotics.com">Nitish Sharma</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>moveit_msgs</build_depend>
  <run_depend>moveit_msgs</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>

</package>
